Simplify git attributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,6 @@
-# Text
-*.example text eol=lf
-*.json text eol=lf
-*.md text eol=lf
-*.patch text eol=lf
-*.py text eol=lf
-*.sh text eol=lf
-*.sql text eol=lf
-*.svg text eol=lf
-*.webmanifest text eol=lf
-*.yaml text eol=lf
-.gitattributes text eol=lf
-.gitignore text eol=lf
-LICENSE text eol=lf
+# Most things are text
+* text eol=lf
 
-# Binary
+# But not everything
 *.ico binary
 *.png binary
